add second footer

--- a/index.html
+++ b/index.html
@@ -329,6 +329,8 @@
               </div>
             </div>
           </footer>
-      
+      <footer class="container-fluid p-3 m-2 bg-danger text-white">
+<h1>Hello World</h1>
+      </footer>
   </body>
 </html>
