--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <
-    <title>The Beginner's Guide to Inbound Marketing</title>
+    <title>Second</title>
     <link
       rel="shortcut icon"
       href="https://offers.impactplus.com/hubfs/IMPACT%20Style%20and%20Branding%20Assets/Favicon/IM_Favicon__psd---48px.png"
